--- a/form/index.html
+++ b/form/index.html
@@ -9,17 +9,38 @@
     <!-- <link rel="stylesheet" href="pure.css"> -->
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/grids-responsive-min.css" /> -->
-    <script src="formtoobj.js"></script>
+    <script src="js/formtoobj.js"></script>
+    <script src="js/md5.js"></script>
 </head>
 
 <body>
-    <div id="formcontent">
-    </div>
-    <div class="alert"></div>
-    <div id="content">
+    <div id=formcontent></div>
+    <div class=alert></div>
+    <div id=datalink></div>
+    <div id=content>
         <form id=ProfilForm>
             <fieldset>
                 <legend>Profil</legend>
+
+
+
+                <div class="profil_1">
+                    <div class="name">
+                        <label for="P_Name">Name</label>
+                        <input type="text" id="P_Name" name=Name value=ADXS>
+                    </div>
+                    <div class="password">
+                        <label for="P_Password">Passwort</label>
+                        <input type="password" id="P_Password" name=Passwort value=ADXS>
+                    </div>
+                    <div class="freigeben">
+                        <label>Daten</label>
+                        <input type=checkbox class=hidden id=P_Freigeben name=Freigeben checked>
+                        <label class="buttonlabel zyklus" for=P_Freigeben>freigeben</label>
+                    </div>
+                </div>
+
+
                 <div class="profil_1">
                     <div class="alter">
                         <label for="P_Alter">Jahrgang</label>
@@ -41,6 +62,8 @@
                         <label class="buttonlabel zyklus" for=P_Zyklus>abfragen</label>
                     </div>
                 </div>
+
+
                 <div class="profil_2">
                     <div class="subtyp">
                         <label for="P_Subtyp">ADHS-Subtyp</label>
@@ -201,10 +224,27 @@
 </body>
 <script>
     //
+    // user verification & data link
+    //
+    var localDataNameField = document.getElementById('P_Name');
+    var localDataName = md5(localDataNameField.value);
+    var datalink = document.getElementById('datalink');
+    datalink.innerHTML = "<a href='save.php?n="+localDataName+"'>JSON<a/>";
+
+    localDataNameField.addEventListener("input", event => {
+        localDataName = md5(localDataNameField.value);
+        datalink.innerHTML = "<a href='save.php?n="+localDataName+"'>JSON<a/>";
+        console.log(localDataName)
+
+    });
+
+
+
+
+    //
     // get POST from forms
     //
     var forms = document.getElementsByTagName("FORM");
-    var localDataName = "Mias";
     // console.log(forms)
     for (const form of forms) {
         form.addEventListener("submit", function(evt) {
@@ -262,7 +302,7 @@
 
     function saveOnServer(data, localDataName) {
         var xhr = new XMLHttpRequest();
-        xhr.open("POST", "save.php?n="+localDataName);
+        xhr.open("POST", "save.php?n=" + localDataName);
         xhr.onreadystatechange = function() {
             if (xhr.readyState === 4 && xhr.status === 200) {
                 console.log(xhr.responseText);
