remove situation by longpress on mobile

--- a/form/index.html
+++ b/form/index.html
@@ -14,6 +14,7 @@
     <script src="js/formtoobj.js"></script>
     <script src="js/md5.js"></script>
     <script src="js/debugHelper.js"></script>
+    <script src="js/longpress.js"></script>
 </head>
 
 <body>
